feat: show PB1 breakdown in redeem menu admin
